<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseConnectivityCheckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/android_check_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_check_connection"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/download_speed_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_speed_test"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/facebook_network_connectivity_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_network_connectivity_class"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connesso"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/is_connesso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipologia_rete"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center"
        />

        <TextView
            android:id="@+id/connection_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualita_connessione"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/connection_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/goto_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banking_app"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>